Enhance frontend + backend logic: smart tip generation, unseen combinations, extra number support